--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <link rel="icon" type="logo-am/png" href="images/favicon.png" />
+     <link rel="icon" type="logo-am/png" href="logo-am/favicon.png" />
 </head>
 <head>
 <title>
