--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <link rel="icon" type="logo-am/png" href="logo-am/favicon.png" />
+    <link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <head>
 <title>
