--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@ ArchiMap
 </div>
 </left>
 <iframe class="airtable-embed" src="https://airtable.com/embed/shrWNmPztQpArIHyS?backgroundColor=blue&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="90%" style="background: transparent; border: 1px solid #ccc;"></iframe>
+<iframe src="https://www.google.com/maps/d/u/1/embed?mid=149LRPyWlt-06j8vi8zajy5rz7FLUcijE" width="640" height="480"></iframe>
 </body>
 </html>
